Squashes bug that would render social media links in wrong parent componenet on page load

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -142,6 +142,7 @@
   justify-content: flex-start;
   align-content: center;
   text-decoration: none;
+  text-decoration-style: wavy;
 }
 
 /*---SOCIAL MEDIA STYLES BEGIN---*/
